local/logs/project.log
2024-07-12T01:50:56.317Z - success: protocol editor-framework registered
2024-07-12T01:50:56.322Z - success: protocol app registered
2024-07-12T01:50:56.323Z - success: protocol theme registered
2024-07-12T01:50:56.323Z - success: protocol packages registered
2024-07-12T01:50:56.365Z - normal: Load ~/.CocosCreator/settings.json
2024-07-12T01:50:56.404Z - success: protocol uuid registerred
2024-07-12T01:50:56.405Z - success: protocol db registerred
2024-07-12T01:50:56.405Z - success: protocol thumbnail registerred
2024-07-12T01:50:56.495Z - normal: Initializing Asset Database
2024-07-12T01:50:56.498Z - normal: checking language setting...
2024-07-12T01:50:56.498Z - normal: Language: en
2024-07-12T01:50:56.501Z - success: protocol unpack registerred
2024-07-12T01:50:56.502Z - success: protocol disable-commonjs registerred
2024-07-12T01:50:58.133Z - normal: connected!
2024-07-12T01:50:58.341Z - normal: Check project /Users/mac/Documents/WORK/ShuShi
2024-07-12T01:50:58.344Z - normal: Initializing project /Users/mac/Documents/WORK/ShuShi
2024-07-12T01:50:58.564Z - success: adapters loaded
2024-07-12T01:50:58.568Z - success: asset-db-debugger loaded
2024-07-12T01:50:58.644Z - success: fb-audience-network loaded
2024-07-12T01:50:58.693Z - success: fb-live-stream loaded
2024-07-12T01:50:58.696Z - success: google-play-instant loaded
2024-07-12T01:50:58.697Z - success: jsb-adapter loaded
2024-07-12T01:50:58.721Z - success: package-manager loaded
2024-07-12T01:50:58.722Z - success: runtime-adapters loaded
2024-07-12T01:50:58.723Z - success: runtime-dev-tools loaded
2024-07-12T01:50:58.725Z - success: ui-kit-preview-extra loaded
2024-07-12T01:50:58.727Z - success: ui-kit-preview loaded
2024-07-12T01:50:59.574Z - success: alipay-minigame loaded
2024-07-12T01:50:59.593Z - success: assets loaded
2024-07-12T01:50:59.596Z - success: baidugame-opendata loaded
2024-07-12T01:50:59.598Z - success: baidugame loaded
2024-07-12T01:50:59.602Z - success: builder loaded
2024-07-12T01:50:59.608Z - success: bytedance-opendata loaded
2024-07-12T01:50:59.610Z - success: bytedance loaded
2024-07-12T01:50:59.615Z - success: channel-upload-tools loaded
2024-07-12T01:50:59.775Z - success: cloud-function loaded
2024-07-12T01:51:00.007Z - success: cocos-services loaded
2024-07-12T01:51:00.014Z - success: console loaded
2024-07-12T01:51:00.017Z - success: curve-editor loaded
2024-07-12T01:51:00.025Z - success: fb-instant-games loaded
2024-07-12T01:51:00.028Z - success: game-window loaded
2024-07-12T01:51:00.030Z - success: google-instant-games loaded
2024-07-12T01:51:00.034Z - success: hierarchy loaded
2024-07-12T01:51:00.037Z - success: huawei-agc loaded
2024-07-12T01:51:00.041Z - success: huawei-runtime loaded
2024-07-12T01:51:00.044Z - success: inspector loaded
2024-07-12T01:51:00.064Z - success: cpk-publish loaded
2024-07-12T01:51:00.066Z - success: keystore loaded
2024-07-12T01:51:00.087Z - success: link-sure-runtime loaded
2024-07-12T01:51:00.108Z - success: node-library loaded
2024-07-12T01:51:00.109Z - success: open-recent-items loaded
2024-07-12T01:51:00.112Z - success: oppo-runtime loaded
2024-07-12T01:51:00.114Z - success: package-asset loaded
2024-07-12T01:51:00.115Z - success: preferences loaded
2024-07-12T01:51:00.119Z - success: project-importer loaded
2024-07-12T01:51:00.122Z - success: project-settings loaded
2024-07-12T01:51:00.135Z - success: qtt-runtime loaded
2024-07-12T01:51:00.140Z - success: scene loaded
2024-07-12T01:51:00.140Z - success: simulator-debugger loaded
2024-07-12T01:51:00.141Z - success: sprite-editor loaded
2024-07-12T01:51:00.214Z - success: store loaded
2024-07-12T01:51:00.216Z - success: taobao-creativeapp loaded
2024-07-12T01:51:00.220Z - success: timeline loaded
2024-07-12T01:51:00.226Z - success: vivo-runtime loaded
2024-07-12T01:51:00.229Z - success: wechatgame-opendata loaded
2024-07-12T01:51:00.235Z - success: wechatgame loaded
2024-07-12T01:51:00.239Z - success: xiaomi-runtime loaded
2024-07-12T01:51:00.294Z - success: im-plugin loaded
2024-07-12T01:51:00.295Z - warn: The current '7456' preview port is already occupied, the port is automatically incremented
2024-07-12T01:51:00.296Z - success: preview server running at http://localhost:7457
2024-07-12T01:51:01.808Z - info: Cocos Service load base data!
2024-07-12T01:51:02.417Z - normal: Initializing Cocos2d
2024-07-12T01:51:02.659Z - normal: Initializing engine extends
2024-07-12T01:51:07.173Z - normal: Loading packages
2024-07-12T01:51:07.176Z - normal: Watching packages
2024-07-12T01:51:07.402Z - normal: Run Application
2024-07-12T01:51:12.322Z - success: cloud-function unloaded
2024-07-12T01:53:56.972Z - error: Reference "0" of "hook" to external scene object "ShopView" can not be saved in prefab asset.
    at /Applications/Cocos/Creator/2.4.6/CocosCreator.app/Contents/Resources/app.asar/editor/page/scene-utils/utils/prefab.ccc:1:4814
    at t (/Applications/Cocos/Creator/2.4.6/CocosCreator.app/Contents/Resources/app.asar/editor/page/scene-utils/utils/prefab.ccc:1:4481)
    at /Applications/Cocos/Creator/2.4.6/CocosCreator.app/Contents/Resources/app.asar/editor/page/scene-utils/utils/prefab.ccc:1:4592
    at /Applications/Cocos/Creator/2.4.6/CocosCreator.app/Contents/Resources/app.asar/editor/page/scene-utils/utils/prefab.ccc:1:4599
    at _ (/Applications/Cocos/Creator/2.4.6/CocosCreator.app/Contents/Resources/app.asar/editor/page/scene-utils/utils/prefab.ccc:1:952)
    at _ (/Applications/Cocos/Creator/2.4.6/CocosCreator.app/Contents/Resources/app.asar/editor/page/scene-utils/utils/prefab.ccc:1:1005)
    at Object.getDumpableNode (/Applications/Cocos/Creator/2.4.6/CocosCreator.app/Contents/Resources/app.asar/editor/page/scene-utils/utils/prefab.ccc:1:4211)
    at Object.createPrefabFrom (/Applications/Cocos/Creator/2.4.6/CocosCreator.app/Contents/Resources/app.asar/editor/page/scene-utils/utils/prefab.ccc:1:5168)
    at Object.createPrefab (/Applications/Cocos/Creator/2.4.6/CocosCreator.app/Contents/Resources/app.asar/editor/page/scene-utils/index.ccc:1:4811)
2024-07-12T06:42:58.365Z - error: Error: Parsing file /Users/mac/Documents/WORK/ShuShi/temp/quick-scripts/src/assets/SuShiCarb/scripts/Game/Ui_Popup/Shop/ShuShiCarb.ItemHook.js: Unexpected token (67:12)
    at Deps.parseDeps (/Applications/Cocos/Creator/2.4.6/CocosCreator.app/Contents/Resources/app.asar/node_modules/module-deps/index.js:481:28)
    at getDeps (/Applications/Cocos/Creator/2.4.6/CocosCreator.app/Contents/Resources/app.asar/node_modules/module-deps/index.js:414:40)
    at /Applications/Cocos/Creator/2.4.6/CocosCreator.app/Contents/Resources/app.asar/node_modules/module-deps/index.js:398:32
    at ConcatStream.<anonymous> (/Applications/Cocos/Creator/2.4.6/CocosCreator.app/Contents/Resources/app.asar/node_modules/concat-stream/index.js:36:43)
    at ConcatStream.emit (events.js:327:22)
    at ConcatStream.emit (domain.js:483:12)
    at finishMaybe (/Applications/Cocos/Creator/2.4.6/CocosCreator.app/Contents/Resources/app.asar/node_modules/concat-stream/node_modules/readable-stream/lib/_stream_writable.js:475:14)
    at endWritable (/Applications/Cocos/Creator/2.4.6/CocosCreator.app/Contents/Resources/app.asar/node_modules/concat-stream/node_modules/readable-stream/lib/_stream_writable.js:485:3)
    at ConcatStream.end (/Applications/Cocos/Creator/2.4.6/CocosCreator.app/Contents/Resources/app.asar/node_modules/concat-stream/node_modules/readable-stream/lib/_stream_writable.js:455:41)
    at DestroyableTransform.onend (/Applications/Cocos/Creator/2.4.6/CocosCreator.app/Contents/Resources/app.asar/node_modules/readable-stream/lib/_stream_readable.js:577:10)
    at m._parseEntry (/Applications/Cocos/Creator/2.4.6/CocosCreator.app/Contents/Resources/app.asar/editor/share/quick-compile/index.ccc:1:6393)
    at runMicrotasks (<anonymous>)
    at processTicksAndRejections (internal/process/task_queues.js:97:5)
    at async Promise.all (index 0)
    at async m._compileScripts (/Applications/Cocos/Creator/2.4.6/CocosCreator.app/Contents/Resources/app.asar/editor/share/quick-compile/index.ccc:1:3491)
2024-07-12T06:42:58.750Z - failed: load script [./assets/SuShiCarb/scripts/Game/Ui_Popup/Shop/ShuShiCarb.ItemHook] failed : /Users/mac/Documents/WORK/ShuShi/temp/quick-scripts/dst/assets/SuShiCarb/scripts/Game/Ui_Popup/Shop/ShuShiCarb.ItemHook.js:67
            ;
            ^

SyntaxError: Unexpected token ';'
    at new Script (vm.js:88:7)
    at createScript (vm.js:261:10)
    at Object.runInThisContext (vm.js:309:10)
    at wrapSafe (internal/modules/cjs/loader.js:1047:15)
    at Module._compile (internal/modules/cjs/loader.js:1108:27)
    at Object.f (/Applications/Cocos/Creator/2.4.6/CocosCreator.app/Contents/Resources/app.asar/editor-framework/lib/share/require.js:1:1993)
    at Module.load (internal/modules/cjs/loader.js:992:32)
    at Module._load (internal/modules/cjs/loader.js:885:14)
    at Function.f._load (electron/js2c/asar_bundle.js:5:12734)
    at Module.require [as __require] (internal/modules/cjs/loader.js:1032:19)
2024-07-12T06:42:58.855Z - warn: Script attached to "hook" is missing or invalid. Detailed information:
Node path: "hook"
Script UUID: "dc267012-00ac-4b8d-9066-de7a42d6ffb5"
Class ID: "dc267ASAKxLjZBm3npC1v+1"

